fix: canvas height cropped incorrectly

--- a/components/PortfolioList.module.scss
+++ b/components/PortfolioList.module.scss
@@ -11,12 +11,12 @@
   padding: 0 var(--layout-gutter-width);
   max-width: var(--layout-content-max-width);
   margin: 0 auto;
-  margin-bottom: 14rem;
+  padding-bottom: 14rem;
   @include effect-fadeIn;
   animation-duration: var(--animation-timing-duration);
   animation-delay: var(--animation-timing-last);
 
   @media (min-width: $media-min-small) {
-    padding: 0 var(--layout-gutter-width-desktop) 10rem;
+    padding: 0 var(--layout-gutter-width-desktop) 14rem;
   }
 }
